[gd_scene load_steps=57 format=2]

[ext_resource path="res://Enemies/Monsters_Creatures_Fantasy/Goblin/Run.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Monsters_Creatures_Fantasy/Goblin/Take Hit.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Monsters_Creatures_Fantasy/Goblin/Death.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Monsters_Creatures_Fantasy/Goblin/Attack.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Monsters_Creatures_Fantasy/Goblin/Idle.png" type="Texture" id=5]
[ext_resource path="res://Player/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://Enemies/Basic/Attack.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Basic/Run.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Basic/Death.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Basic/Idle.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Basic/BasicEnemy.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Basic/Fall.gd" type="Script" id=12]
[ext_resource path="res://Enemies/Basic/Vision.gd" type="Script" id=13]
[ext_resource path="res://Enemies/Basic/Takehit.gd" type="Script" id=14]
[ext_resource path="res://Enemies/Basic/Jump.gd" type="Script" id=15]
[ext_resource path="res://Enemies/Basic/behindRay.gd" type="Script" id=16]
[ext_resource path="res://Enemies/Basic/EnemyHitbox.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 17.5 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "takehit",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 14.1897
height = 59.2591

[sub_resource type="CapsuleShape2D" id=35]
radius = 16.0
height = 4.0

[node name="Enemy" type="KinematicBody2D"]
physics_interpolation_mode = 2
z_index = 1
collision_layer = 2
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 11 )
_hitbox_collision_shape = NodePath("EnemyHitbox/CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 8.5 )
shape = SubResource( 1 )

[node name="Vision" type="Node2D" parent="."]
rotation = 1.5708
script = ExtResource( 13 )
_enemyNode = NodePath("..")

[node name="Ray100" type="RayCast2D" parent="Vision"]
rotation = 1.74533
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray110" type="RayCast2D" parent="Vision"]
rotation = 1.91986
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray120" type="RayCast2D" parent="Vision"]
rotation = 2.0944
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray130" type="RayCast2D" parent="Vision"]
rotation = 2.26893
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray140" type="RayCast2D" parent="Vision"]
rotation = 2.44346
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray150" type="RayCast2D" parent="Vision"]
rotation = 2.61799
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray160" type="RayCast2D" parent="Vision"]
rotation = 2.79253
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray170" type="RayCast2D" parent="Vision"]
rotation = 2.96706
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray180" type="RayCast2D" parent="Vision"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray190" type="RayCast2D" parent="Vision"]
rotation = 3.31613
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray90" type="RayCast2D" parent="Vision"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="Ray80" type="RayCast2D" parent="Vision"]
rotation = 1.39626
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 17

[node name="ground_check_ray" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="ground_check_ray2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 28 )

[node name="ground_check_ray3" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="behindRay" type="RayCast2D" parent="."]
position = Vector2( 0, 9 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 16
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 30 )
animation = "takehit"
frame = 7
playing = true

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
monitoring = false
monitorable = false
script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
modulate = Color( 0.0196078, 1, 0, 1 )
position = Vector2( 0, 5 )
rotation = 2.03854
shape = SubResource( 34 )

[node name="EnemyHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
modulate = Color( 1, 0.141176, 0, 1 )
position = Vector2( -2, 9 )
shape = SubResource( 35 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Fall")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
_animation = NodePath("../../AnimatedSprite")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_animation = NodePath("../../AnimatedSprite")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
_animation = NodePath("../../AnimatedSprite")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
_animation = NodePath("../../AnimatedSprite")
_hitbox = NodePath("../../EnemyHitbox")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
_animation = NodePath("../../AnimatedSprite")

[node name="Takehit" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
_animation = NodePath("../../AnimatedSprite")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
